# Revelation

./: .gitignore  .gitmodules  README.md
SourceCode/: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
SourceCode/DataPersistence/: CMakeLists.txt  DataPersistenceInterface.cpp  DataPersistenceInterface.h  dllmain.cpp
SourceCode/DataPersistence/RoutineSerializer/: RoutineSerializer.cpp  RoutineSerializer.h
SourceCode/DataPersistence/Sqlite/: SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteLink.cpp  SQLiteLink.h
SourceCode/DataPersistence/TaskSerializer/: TaskSerializer.cpp  TaskSerializer.h
SourceCode/FluentUI/: CMakeLists.txt
SourceCode/FluentUI/FluControls/: CMakeLists.txt  FluCalendarDatePicker.h  FluCalendarView.cpp  FluControls.vcxproj  FluFrameLessWidget.cpp
SourceCode/FluentUI/FluUtils/: CMakeLists.txt  FluIconUtils.cpp  FluStyleSheetUitls.cpp  FluUtils.vcxproj
SourceCode/Include/: BroadcastTypes.h  ICommonWidgetInterface.h  IDataPersistenceInterface.h  IExtensionInterface.h  INavigationViewInterface.h  IRevelatioMainWindow.h  IRevelationDataDefine.h  IRevelationInterface.h  IUtilityInterface.h  JsonOperator.h  RevelationMacros.h
SourceCode/Include/CommonWidgets/: ICommonWidgetInterface.h
SourceCode/Include/DataModel/: IDataModelInterface.h
SourceCode/Include/DataPersistence/: IDataPersistenceInterface.h  IDatabase.h  IRoutineSerialzer.h  ITaskSerialzer.h
SourceCode/Include/TimeMachine/: ITimeMacineInterface.h
SourceCode/Include/Utility/: IDateTimeFormatter.h  ISettingsToolkit.h  ISnowFlakeGenerator.h  ITaskCreator.h  IThreadTaskCreator.h  IUtilityInterface.h
SourceCode/Revelation/: CMakeLists.txt  CommonWidgetInterface.cpp  CommonWidgetInterface.h  FramelessWindow.cpp  FramelessWindow.h  NavigationViewInterface.cpp  NavigationViewInterface.h  Revelation.cpp  Revelation.h  Revelation.ui  RevelationBottomBar.cpp  RevelationBottomBar.h  RevelationBottomBar.ui  RevelationConfig.cpp  RevelationConfig.h  RevelationConfig.ui  RevelationInterface.cpp  RevelationInterface.h  RevelationLeftSidebar.cpp  RevelationLeftSidebar.h  RevelationLeftSidebar.ui  RevelationListDelegate.cpp  RevelationListDelegate.h  RevelationListItem.cpp  RevelationListItem.h  RevelationListItem.ui  RevelationListModel.cpp  RevelationListModel.h  RevelationListView.cpp  RevelationListView.h  RevelationMainWindow.cpp  RevelationMainWindow.h  RevelationRightSidebar.cpp  RevelationRightSidebar.h  RevelationRightSidebar.ui  RevelationSidebar.cpp  RevelationSidebar.h  RevelationSidebar.ui  RevelationSplash.cpp  RevelationSplash.h  (+2 more)
SourceCode/Revelation/resource/: Revelation.rc  resource.h
SourceCode/TimeMachine/: CMakeLists.txt  TimeMachine.cpp  TimeMachine.h  TimeMachine.ui  TimeMachineFilter.cpp  TimeMachineFilter.h  TimeMachineFilter.ui  TimeMachineGantt.cpp  TimeMachineGantt.h  TimeMachineGantt.ui  TimeMachineGanttDelegate.cpp  TimeMachineGanttDelegate.h  TimeMachineGanttModel.cpp  TimeMachineGanttModel.h  TimeMachineGanttView.cpp  TimeMachineGanttView.h  TimeMachineGanttView.ui  TimeMachineInterface.cpp  TimeMachineInterface.h  TimeMachineModel.cpp  dllmain.cpp
SourceCode/Utilities/: CMakeLists.txt  DateTimeFormatter.cpp  DateTimeFormatter.h  SettingsToolkit.cpp  SettingsToolkit.h  SnowFlakeGenerator.cpp  SnowFlakeGenerator.h  TaskCreator.cpp  TaskCreator.h  ThreadTaskCreator.cpp  ThreadTaskCreator.h  UtilityInterface.cpp  UtilityInterface.h  dllmain.cpp
resources/qss/dark/: FluCalendarDateTimePicker.qss  FluCalendarTimeView.qss  FluComboBox.qss  FluLabel.qss  FluPushButton.qss  FluSettingsVersionBox.qss  FluTimePicker24H.qss  Revelation.qss  RevelationBottomBar.qss  RevelationMainWindow.qss  RevelationRightSidebar.qss  TimeMachine.qss  TimeMachineFilter.qss  TimeMachineGanttView.qss
resources/qss/light/: FluCalendarDateTimePicker.qss  FluCalendarTimeView.qss  FluComboBox.qss  FluPushButton.qss  FluTimePicker24H.qss  FluVNavigationView.qss  Revelation.qss  RevelationListView.qss  RevelationMainWindow.qss  RevelationRightSidebar.qss  TimeMachineFilter.qss  TimeMachineGanttView.qss
resources/settings/: settings.json
